--- a/templates/widgets/chain/chain_editor.html
+++ b/templates/widgets/chain/chain_editor.html
@@ -254,7 +254,7 @@
 					});
 				} else {
 					var response_container = "#modalresponsecontainer";
-		        	$(response_container).html("Selected operations chain added to scheduler. Chech in the history widget for results.");
+		        	$(response_container).html("Selected operations chain added to scheduler. Check in the history widget for results.");
 					$(response_container).dialog({
 							modal : true,
 							title : 'Start Scheduler',
