--- a/templates/widgets/chain/chain_history.html
+++ b/templates/widgets/chain/chain_history.html
@@ -78,7 +78,7 @@
 			},
 			success : function(data) {
 				$("#detailscontainer").empty();
-				$("#detailscontainer").html("Selected operations chain added to scheduler. Chech in the history widget for results.");
+				$("#detailscontainer").html("Selected operations chain added to scheduler. Check in the history widget for results.");
 				
 				$("#detailscontainer").dialog({
 					modal : true,
