--- a/templates/platforms/postgresql/executeform.html
+++ b/templates/platforms/postgresql/executeform.html
@@ -122,6 +122,8 @@
 			url : '{{base_url}}/platform/postgresql/get_log_file/' + logFile + '/',
 			// The type of request.
 			type : "get",
+			cache: false,
+            async: false,
 			// The type of data that is getting returned.
 			dataType : "json",
 			error : function() {
