--- a/templates/widgets/applications/applidetails.html
+++ b/templates/widgets/applications/applidetails.html
@@ -8,7 +8,8 @@
 		$('#applistatustable').dataTable({
 			 "oLanguage": {
 	            "sSearch": "Appli Search:"
-        	}
+	        },
+	        "bStateSave": true
 		});
 	} );
 </script>
