--- a/templates/widgets/restserver/backendjob.html
+++ b/templates/widgets/restserver/backendjob.html
@@ -7,7 +7,8 @@
 		$('#jobstable').dataTable({
 			 "oLanguage": {
 	            "sSearch": "Job Search:"
-        	}
+	        },
+	        "bStateSave": true
 		});
 		
 		$(".uuid").hover(function () {
