--- a/templates/widgets/puppetclasses/puppetclasses.html
+++ b/templates/widgets/puppetclasses/puppetclasses.html
@@ -235,6 +235,7 @@
 <!--  Context menu -->
 <div class="context">
 	<ul id="menu" class="jeegoocontext cm_default">
+		<li class="icon" style="display: none;></li>
 		{% if agents %}
 		<li class="icon">
 			<span class="icon folder"></span>Agents
