Added order for date colums in datatables

--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -58,6 +58,8 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-collapsible-panel/diQuery-collapsiblePanel.js"></script>
 		<!-- DataTable -->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-datatable/jquery.dataTables.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-datatable/jquery.dataTable.dateSorting.js"></script>
+		
 		<!-- Kermit Scripts-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/kermit/kermit.js"></script>
 		<script>
