Fixed problem saving hours for backend job Fixed problem showing context menu Fixed problem in ordering tables on datetime column

--- a/templates/widgets/chain/chain_history.html
+++ b/templates/widgets/chain/chain_history.html
@@ -8,10 +8,16 @@
 			 "oLanguage": {
 	            "sSearch": "Scheduler Search:"
         	},
-        	"aaSorting": [[ 2, "asc" ]],
+        	{% if user.is_staff %}
+        	"aaSorting": [[ 2, "desc" ]],
+        	{% else %}
+        	"aaSorting": [[ 1, "desc" ]],
+        	{% endif %}
         	"bStateSave": true,
         	"aoColumns": [
+        		{% if user.is_staff %}
 		        {"bSortable": true},
+		        {% endif %}
 		        {"bSortable": true},
 		        {"sType": "date-euro"},
 		        {"bSortable": true},
