Fixed two minor bugs

--- a/templates/widgets/chain/chain_history.html
+++ b/templates/widgets/chain/chain_history.html
@@ -61,8 +61,8 @@
 				$("#detailscontainer").dialog({
 					modal : true,
 					title : 'Scheduler Details',
-					height : 400,
-					width : 900,
+					height : 350,
+					width : 1100,
 					open: function(event, ui){
 						$('body').css('overflow','auto');
 						$('.ui-widget-overlay').css('width','100%'); 
@@ -152,7 +152,7 @@ table.schedulertable tr.odd {
 				<td>{{job.user}}</td>
 				{% endif %}
 				<td><span class="uuid" style="text-decoration:underline; color: #444444;" onclick="showJobDetails('{% url get_scheduler_details job.name %}');">{{job.name}}</span></td>
-				<td>{{job.last_run|date:"d/m/Y h:i:s"}}</td>
+				<td>{{job.last_run|date:"d/m/Y H:i:s"}}</td>
 				<td>{{job.task_running}}</td>
 				<td>
 					<span style="color: {% if job.status == 'COMPLETED'%}green{% else %}{% if job.status == 'WAITING' %}yellow{% else %}red{% endif%}{% endif%};">{{job.status}}</span>
