Changed levels labels

--- a/templates/widgets/serverstatus/serverstatus.html
+++ b/templates/widgets/serverstatus/serverstatus.html
@@ -46,11 +46,11 @@ table.serverstatus tr.odd {
 		<thead>
 			<th width="60px">{% trans 'A7X'%}</th>
 			<th>{% trans 'Hostname'%}</th>
-			<th>{% trans 'Level 1'%}</th>
-			<th>{% trans 'Level 2'%}</th>
-			<th>{% trans 'Level 3'%}</th>
-			<th>{% trans 'Level 4'%}</th>
-			<th>{% trans 'Level 5'%}</th>
+			<th>{% trans 'Activity'%}</th>
+			<th>{% trans 'Platform'%}</th>
+			<th>{% trans 'Env.'%}</th>
+			<th>{% trans 'Zone'%}</th>
+			<th>{% trans 'Appli'%}</th>
 		</thead>
 		<tbody>
 			{% for server in servers %}
