--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -59,6 +59,9 @@
 		<!-- DataTable -->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-datatable/jquery.dataTables.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-datatable/jquery.dataTable.dateSorting.js"></script>
+		<!-- JQuery TinySort-->
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-tinysort/jquery.tinysort.min.js"></script>
+		
 		
 		<!-- Kermit Scripts-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/kermit/kermit.js"></script>
