Completed Edit Classes on a server Added Admin area to Update Hiera classes (all classes defined on puppetmaster). Requires 'puppetagent' mco agent Split initial_data and custom kermit data

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -166,6 +166,9 @@
 			<li>
 				<a href="#" onclick="executeAction('Update User Groups', '{% url action_executer "update_user_groups" "ASYNC"%}');">{% trans 'Update User Groups' %}</a>
 			</li>
+			<li>
+				<a href="#" onclick="executeAction('Update Puppet Classes', '{% url action_executer "updated_puppet_classes" "ASYNC"%}');">{% trans 'Update Puppet Classes' %}</a>
+			</li>
 		</ul>
 		</div>
 		<div class="module actions" id="custom-import-action-module">
