Added Widgets Cookies Added down arrow on main menu (near welcome message)

--- a/templates/agents/default.html
+++ b/templates/agents/default.html
@@ -24,7 +24,8 @@ background: #F0F0F0
 </style>
 <script>
 	$(document).ready(function() {
-        $('#responsedata').dataTable();
+        $('#responsedata').dataTable({
+        	"bRetrieve": true});
     });
 </script>
 
