--- a/templates/widgets/chain/chain_history.html
+++ b/templates/widgets/chain/chain_history.html
@@ -8,6 +8,7 @@
 			 "oLanguage": {
 	            "sSearch": "Scheduler Search:"
         	},
+        	"bRetrieve": true,
         	{% if user.is_staff %}
         	"aaSorting": [[ 2, "desc" ]],
         	{% else %}
