--- a/templates/widgets/chain/scheddetails.html
+++ b/templates/widgets/chain/scheddetails.html
@@ -6,7 +6,8 @@
 	            "sSearch": "Task Search:"
         	},
         	"aaSorting": [[ 1, "asc" ]],
-        	"bStateSave": true
+        	"bStateSave": true,
+        	"bRetrieve": true
 		});
 	});
 	
