Updated rpm version Added down arrow for Export menu too

--- a/templates/theme/kermit/header.html
+++ b/templates/theme/kermit/header.html
@@ -36,7 +36,7 @@
 		</li>
 		{% endif %}
 		<li class="user-options-container collapse closed">
-			<a href="javascript://" class="user-options-handler collapse-handler">{% trans 'Export'%}</a>
+			<a href="javascript://" class="user-options-handler collapse-handler">{% trans 'Export'%} <img src="{{STATIC_URL}}images/icons/down_arrow.png" width="10px"/></a>
 			<ul class="user-options">
 				<li>
 					<a href="{{base_url}}/export/servers/csv/">{% trans 'All Servers (CSV)' %}</a>
