Added first version of Dynamic Groups with Dashboard Widget

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -169,6 +169,9 @@
 			<li>
 				<a href="#" onclick="executeAction('Update Puppet Classes', '{% url action_executer "updated_puppet_classes" "ASYNC"%}');">{% trans 'Update Puppet Classes' %}</a>
 			</li>
+			<li>
+				<a href="#" onclick="executeAction('Update Dynamic Groups', '{% url action_executer "updated_dyna_groups" "ASYNC"%}');">{% trans 'Update Dynamic Groups' %}</a>
+			</li>
 		</ul>
 		</div>
 		<div class="module actions" id="custom-import-action-module">
